Fix item list overflow by making it scrollable without a scrollbar

--- a/frontend/our-groceries/src/app/item-list/item-list.component.scss
+++ b/frontend/our-groceries/src/app/item-list/item-list.component.scss
@@ -24,3 +24,14 @@
   width: 100%;
   height: 5px;
 }
+
+.overflow-buffer
+{
+  overflow-y: scroll;
+  max-height: 69vh;
+  -ms-overflow-style: none;
+}
+
+.overflow-buffer::-webkit-scrollbar {
+  display: none;
+}
